# Quant

./: CMakeLists.txt  README.md
data/: tickerdata.py
src/: CMakeLists.txt  gui.h  main.cpp  styles.h
src/gui/: gui.cpp  gui.h  styles.cpp  styles.h
src/gui/views/: candlestick.cpp  candlestick.h  candlestickview.cpp  candlestickview.h  general.cpp  general.h  generalview.cpp  generalview.h  indicators.cpp  indicators.h  indicatorview.cpp  indicatorview.h  sde.cpp  sde.h  sdeview.cpp  sdeview.h  tickerselectionview.cpp  tickerselectionview.h  view.h
src/stocks/: ticker.h
src/ticker/: tickerdata.cpp  tickerdata.h
src/util/: csv.h  curl.cpp  curl.h  split.h
src/window/: window.cpp  window.h
